# ChangeLog for sys-process/criu
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/criu/ChangeLog,v 1.20 2015/03/16 03:08:29 dlan Exp $

  16 Mar 2015; Yixun Lan <dlan@gentoo.org> metadata.xml:
  add virt herd to get more attention

  16 Mar 2015; Yixun Lan <dlan@gentoo.org> metadata.xml:
  add myself as maintainer

  16 Mar 2015; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Drop myself as maintainer.

*criu-1.5-r2 (16 Mar 2015)

  16 Mar 2015; Tim Harder <radhermit@gentoo.org> -criu-1.5-r1.ebuild,
  +criu-1.5-r2.ebuild:
  Drop protobuf-c dep restrictions since buggy versions have been removed from
  the tree.

  13 Mar 2015; Yixun Lan <dlan@gentoo.org> criu-1.5-r1.ebuild:
  add ~arm keyword

  11 Mar 2015; Tim Harder <radhermit@gentoo.org> -criu-1.2-r1.ebuild,
  -criu-1.3.1.ebuild, -criu-1.5.ebuild, -files/criu-0.6-flags.patch,
  -files/criu-1.2-makefile.patch:
  Remove old.

*criu-1.5-r1 (11 Mar 2015)

  11 Mar 2015; Tim Harder <radhermit@gentoo.org> +criu-1.5-r1.ebuild,
  +files/criu-1.5-automagic-libbsd.patch, metadata.xml:
  Add setproctitle use flag to fix automagic dep on dev-libs/libbsd (bug
  #540744).

*criu-1.5 (11 Mar 2015)

  11 Mar 2015; Tim Harder <radhermit@gentoo.org> +criu-1.5.ebuild:
  Version bump (bug #542888).

*criu-1.4 (04 Dec 2014)

  04 Dec 2014; Tim Harder <radhermit@gentoo.org> +criu-1.4.ebuild:
  Version bump.

*criu-1.3.1 (08 Nov 2014)

  08 Nov 2014; Tim Harder <radhermit@gentoo.org> +criu-1.3.1.ebuild,
  +files/criu-1.3.1-flags.patch, +files/criu-1.3.1-makefile.patch:
  Version bump.

*criu-1.2-r1 (13 Aug 2014)

  13 Aug 2014; Tim Harder <radhermit@gentoo.org> -criu-1.2.ebuild,
  +criu-1.2-r1.ebuild:
  Specify required protobuf-c version range.

  13 Aug 2014; Tim Harder <radhermit@gentoo.org> -criu-0.5.ebuild,
  -criu-0.6.ebuild, -criu-0.7.ebuild, -criu-0.8.ebuild, -criu-1.0.ebuild,
  -criu-1.1.ebuild, -files/crtools-0.4-flags.patch:
  Remove old.
