@@ -1,6 +1,11 @@
 # ChangeLog for sys-process/criu
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/criu/ChangeLog,v 1.20 2015/03/16 03:08:29 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/criu/ChangeLog,v 1.21 2015/04/13 02:21:24 dlan Exp $
+
+*criu-1.5.1 (13 Apr 2015)
+
+  13 Apr 2015; Yixun Lan <dlan@gentoo.org> +criu-1.5.1.ebuild:
+  version bump
 
   16 Mar 2015; Yixun Lan <dlan@gentoo.org> metadata.xml:
   add virt herd to get more attention
